kubernetes/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      labels:
        app: nginx
        tier: backend
    spec:
      volumes: null
      containers:
      - image: lebadapetru/erp_nginx:latest
        name: nginx
        ports:
        - containerPort: 80
      restartPolicy: Always
